# ds210-sp26-a1-code

./: README.md
discussion_2_git/src/: main.rs
homework_3_guessing_game/: Cargo.toml  README.md
homework_3_guessing_game/src/: experiment.rs  game.rs  part1.rs  part2.rs  part3.rs  player.rs  strategies.rs
module_2_why_rust/1_rust_vs_python/: Cargo.toml  README.md
module_2_why_rust/1_rust_vs_python/src/: example.py  example.rs  helpers.py  helpers.rs
module_2_why_rust/2_matrix/: Cargo.toml  README.md
module_2_why_rust/2_matrix/src/: columns.rs  helpers.rs  rows.rs
module_4_variables_and_types/1_static_vs_dynamic_typing/: Cargo.toml
module_4_variables_and_types/1_static_vs_dynamic_typing/src/: example1.py  example2.py  example3.py  main.rs
module_4_variables_and_types/2_option_type/: Cargo.toml
module_4_variables_and_types/2_option_type/src/: example.py  main.rs
module_4_variables_and_types/3_match/: Cargo.toml
module_6_evaluating_code/1_contains_duplicate/: Cargo.toml
module_6_evaluating_code/2_majority_element/: Cargo.toml
project_1_vector/: Cargo.toml  README.md
project_1_vector/fast_vec/: Cargo.toml
project_1_vector/fast_vec/src/: experiment.rs  lib.rs  main.rs  memory.rs
project_1_vector/fast_vec/tests/: basic.rs  errors.rs  memory.rs
project_1_vector/fixed/: Cargo.toml
project_1_vector/malloc/: Cargo.toml
project_1_vector/slow_vec/: Cargo.toml
project_1_vector/slow_vec/src/: lib.rs  main.rs  memory.rs
project_1_vector/slow_vec/tests/: basic.rs  memory.rs
project_1_vector/tracker/: Cargo.toml
(+18 files in other folders)
