[package]
name = "slow_vec"
version = "0.1.0"
edition = "2024"

[lib]
name = "slow_vec"
path = "src/lib.rs"

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "memory"
path = "src/memory.rs"

[dependencies]
fixed = { path = "../fixed" }
tracker = { path = "../tracker" }

[dev-dependencies]
malloc = { path = "../malloc" }
rand = "0.10.0"
